--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
 <body>
 	<div class="reveal">
 		<div class="slides">
-			<section data-markdown="markdown.md" data-separator="^---" data-separator-vertical="^--"></section>
+			<section
+				data-markdown="markdown.md"
+				data-separator="^---"
+				data-separator-vertical="^--"
+				data-separator-notes="^Note:"></section>
 		</div>
 	</div>
 
