--- a/md-canvas.html
+++ b/md-canvas.html
@@ -6,10 +6,9 @@
   * Time
   * Pricing
   * Collateral
-
-  * Issuance e.g. ERC20, ERC721
+  * Issuance
   * Supply
-  
+
   * Function
   * Composition e.g. piecewise
 </section>
@@ -22,7 +21,10 @@
       flex: 1;
     }
   </style>
-  <div data-markdown>## Time</div>
+  <div data-markdown>
+    ## Time
+    * Vesting, continuous aggregation.
+  </div>
   <div class="container">
     <div data-markdown class="col">
       ![capacitor charge time constant](./assets/capacitor-charge-time-constant.webp)
@@ -57,4 +59,21 @@
   ## Collateral
   * Stable vs. volatile
   * Molecule R&D markets - underlying Dai collateral
+</section>
+<section data-markdown>
+  ## Issuance
+  * e.g. ERC20, ERC721
+  * Fungible vs. non-fungible
+  * Fungible: identical, interchangeable, divisible
+  * Non-fungible: Unique e.g. Ocean data access tokens
+</section>
+<section data-markdown>
+  ## Supply
+  * Capped vs. uncapped
+</section>
+<section data-markdown>
+  ## Function
+  * Relationship between price and token supply
+  * Drives different incentives
+  * Results in specific system dynamics that can only be fully understood with modelling
 </section>
