--- a/md-canvas.html
+++ b/md-canvas.html
@@ -8,9 +8,8 @@
   * Collateral
   * Issuance
   * Supply
-
   * Function
-  * Composition e.g. piecewise
+  * Composition
 </section>
 <section>
   <style>
@@ -53,7 +52,7 @@
       ![diff-in-out](./assets/diff-in-out.png)
     </div>
   </div>
-  <div data-markdown>Source https://medium.com/@simondlr</div>
+  <div data-markdown>Source: https://medium.com/@simondlr</div>
 </section>
 <section data-markdown>
   ## Collateral
@@ -74,6 +73,11 @@
 <section data-markdown>
   ## Function
   * Relationship between price and token supply
-  * Drives different incentives
+  * Drives different actor incentives
   * Results in specific system dynamics that can only be fully understood with modelling
+</section>
+<section data-markdown>
+  ## Composition
+  * Phases and piecewise functions
+  * Taps, inputs and outputs
 </section>
