--- a/md-canvas.html
+++ b/md-canvas.html
@@ -22,7 +22,9 @@
   </style>
   <div data-markdown>
     ## Time
-    * Vesting, continuous aggregation.
+    > The idea of token pools being similar to capacitors collecting charge over TIME
+    * Vesting
+    * Voting, continuous aggregation
   </div>
   <div class="container">
     <div data-markdown class="col">
@@ -43,7 +45,10 @@
       flex: 1;
     }
   </style>
-  <div data-markdown>## Pricing</div>
+  <div data-markdown>
+    ## Pricing
+    > Price differences can introduce ideas like taxation, disincentivize bad behaviour, etc.
+  </div>
   <div class="container">
     <div data-markdown class="col">
       ![same-in-out](./assets/same-in-out.png)
@@ -57,14 +62,18 @@
 <section data-markdown>
   ## Collateral
   * Stable vs. volatile
-  * Molecule R&D markets - underlying Dai collateral
+
+  ![stable collateral](./assets/dai.png)
+
+  Source: https://medium.com/icovo
 </section>
 <section data-markdown>
   ## Issuance
-  * e.g. ERC20, ERC721
-  * Fungible vs. non-fungible
+  > Fungible ERC20 vs. non-fungible ERC721
   * Fungible: identical, interchangeable, divisible
   * Non-fungible: Unique e.g. Ocean data access tokens
+
+  ![fungible](./assets/fungible.png)
 </section>
 <section data-markdown>
   ## Supply
@@ -78,6 +87,9 @@
 </section>
 <section data-markdown>
   ## Composition
-  * Phases and piecewise functions
-  * Taps, inputs and outputs
+  * Bonding curves can be composed as modules
+  * Different inputs and outputs
+  * Different parameters for different phases
+
+  ![building blocks](./assets/lego.png)
 </section>
