--- a/md-canvas.html
+++ b/md-canvas.html
@@ -84,12 +84,25 @@
   * Relationship between price and token supply
   * Drives different actor incentives
   * Results in specific system dynamics that can only be fully understood with modelling
+  ``$$
+  \text{y} = mx + b
+  $$``
+  ``$$
+  \text{y} = mx^2 + bx + c
+  $$``
+  ``$$
+  P(R) = \frac{kR^{(k-1)/k}}{V_{0}^{1/k}}
+  $$``
+
+  (Did I get that last one right @CommonsStack?)
 </section>
 <section data-markdown>
   ## Composition
   * Bonding curves can be composed as modules
   * Different inputs and outputs
   * Different parameters for different phases
+
+  (See Commons Stack Augmented Bonding Curve for a complete system example)
 
   ![building blocks](./assets/lego.png)
 </section>
