--- a/md-canvas.html
+++ b/md-canvas.html
@@ -84,6 +84,8 @@
   * Relationship between price and token supply
   * Drives different actor incentives
   * Results in specific system dynamics that can only be fully understood with modelling
+</section>
+<section data-markdown>
   ``$$
   \text{y} = mx + b
   $$``
